# blob-engine

./: .gitignore  Cargo.toml  LICENSE
assets/scenes/: scene1.2d.json
assets/shaders/: base2d.slang  base_2d.slang  post_processing.slang
assets/shaders/.compiled/: slang_post_processing.frag.spv  slang_post_processing.vert.spv
assets/shaders/math_utils/: math_utils.slang
assets/shaders/sdf2d/: sdf2d.slang  shapes2d.slang
src/: constants.rs  core.rs  lib.rs  main.rs  slang_utils.rs
src/core/: scene_parsing.rs
src/slang_utils/: mod.rs
