[package]
name = "blob-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking", "file_watcher", "shader_format_spirv", "shader_format_glsl"] }
const_format = "0.2.32"
serde = "1.0.208"
serde_json = "1.0.125"
serde_repr = "0.1.19"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[features]
webgl2 = []
